corrigir interliações entre separador pedido e fecho turno, remover separador plan da produção, add auto refresh apos novos pedidos e entradas, add proximos planos do dia para plano diario e corrigir erros db
